# RAGapp

./: .env  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/routes/: chat.py  clients.py  ingestion.py  sources.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/models/: base.py  client.py  query_log.py  source.py
backend/app/services/: llm.py  scheduler.py  tasks.py
backend/configs/_template/: config.yaml
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
