[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "competitive-rag-backend"
version = "0.1.0"
description = "Assistant de veille concurrentielle par RAG"
requires-python = ">=3.11"

dependencies = [
    # --- Web framework ---
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # --- Config & validation ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.4",

    # --- Base de données relationnelle ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # --- Base vectorielle ---
    "qdrant-client>=1.9.0",

    # --- Pipeline RAG ---
    "llama-index>=0.10.0",
    "llama-index-vector-stores-qdrant>=0.2.0",
    "llama-index-embeddings-openai>=0.1.0",
    "llama-index-llms-openai>=0.1.0",
    "llama-index-llms-openai-like>=0.1.0",  # Compatibilité LM Studio / API OpenAI-like

    # --- Ingestion ---
    "httpx>=0.27.0",
    "feedparser>=6.0.11",        # RSS
    "playwright>=1.44.0",        # Scraping JS-heavy
    "pypdf>=4.2.0",              # Extraction PDF
    "python-docx>=1.1.0",        # Extraction DOCX
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",

    # --- Tâches asynchrones ---
    "celery[redis]>=5.4.0",
    "redis>=5.0.4",
    "flower>=2.0.1",

    # --- Auth ---
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "watchfiles>=0.21.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]